--- a/attendance_tracker/templates/base.html
+++ b/attendance_tracker/templates/base.html
@@ -17,15 +17,15 @@
                     <li class="relative cursor-pointer">
                     <!-- Menu items: -->
                     <!-- Home -->
-                    <a href="/" class="hover:after:w-full after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300">Home</a></li>
+                    <a href="/" id="home-nav-link" class="hover:after:w-full after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300">Home</a></li>
                     <li class="relative cursor-pointer">
 
                     <!-- Login -->
-                    <a href="/h/auth/login" class="hover:after:w-full after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300">Login</a></li>
+                    <a href="/h/auth/login" id="login-nav-link" class="hover:after:w-full after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300">Login</a></li>
                     <li class="relative cursor-pointer">
 
                     <!-- Admin Home -->
-                    <a href="/h/admin/home" class="hover:after:w-full after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300">Admin Home</a></li>
+                    <a href="/h/admin/home" id="admin-home-nav-link" class="hover:after:w-full after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300">Admin Home</a></li>
                     <li class="relative cursor-pointer">
                 </ul>
             </div>
