--- a/attendance_tracker/templates/login.html
+++ b/attendance_tracker/templates/login.html
@@ -19,7 +19,7 @@
       <!-- Username/ID/Email, whatever we end up going with -->
       <div>
         <label class="block text-sm font-[Proxima Nova] text-gray-700 mb-1">User ID</label>
-        <input name="uid" required type="userID" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all" placeholder="000000000"/>
+        <input name="uid" type="userID" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all" placeholder="000000000"/>
       </div>
 
       <!-- Password -->
@@ -30,7 +30,7 @@
 
       <!-- Sign in button -->
       <div class="flex items-center justify-center">
-        <button class="button-element bg-color" type="submit">{{ action }}</button>
+        <button id="sign-in-button" class="button-element bg-color" type="submit">{{ action }}</button>
       </div>
     </form>
 
@@ -42,7 +42,7 @@
     <h2 class="text-2xl text-gray-900 mb-6 text-center">user: '{{username}}' successfully logged in!</h2>
     <form action="{{ url_for('auth.log_out') }}" method="post" class="space-y-4">
       <div class="flex items-center justify-center">
-        <button class="button-element bg-color" type="submit">Log out?</button>
+        <button id="log-out-button" class="button-element bg-color" type="submit">Log out?</button>
       </div>
     </form>
     {% endif %}
