--- a/attendance_tracker/templates/login.html
+++ b/attendance_tracker/templates/login.html
@@ -19,13 +19,13 @@
       <!-- Username/ID/Email, whatever we end up going with -->
       <div>
         <label class="block text-sm font-[Proxima Nova] text-gray-700 mb-1">User ID</label>
-        <input name="uid" type="userID" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all" placeholder="000000000"/>
+        <input id="uid-form" name="uid" type="userID" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all" placeholder="000000000"/>
       </div>
 
       <!-- Password -->
       <div>
         <label class="block text-sm font-[Proxima Nova] text-gray-700 mb-1">Password</label>
-        <input name="pw" required type="password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all" placeholder="HuskiesStink1234#"/>
+        <input id="pw-form" name="pw" required type="password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all" placeholder="HuskiesStink1234#"/>
       </div>
 
       <!-- Sign in button -->
