--- a/attendance_tracker/templates/data_view.html
+++ b/attendance_tracker/templates/data_view.html
@@ -2,69 +2,103 @@
 {% block title %} Data View {% endblock %}
 
 {% block content %}
-<body>
-    <div class="flex flex-col content-center" >
-    <div class="grow">
-        <canvas id="data-view" data="{{ chart_config }}" | tojson class="bg-white shadow rounded-lg p-4 sm:p-5">
-        </canvas>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <div class="flex justify-center gap-2">
-        <form action="/h/analytics/data-view" method="post">
+<main class="flex-1 max-w-7xl mx-auto px-6 py-8 w-full">
+    <div class="">
 
-            <!-- Room selections -->
-            <div class="bg-white text-black border text-sm rounded-lg">
-                <label for="location" class="block text-sm font-medium text-white dark:text-gray-200">Choose a room:</label>
-                <select name="location" id="location-select">
-                    <option value="" class="mt-1.5 w-full rounded-lg border bg-white">Choose a location</option>
+        <div class="grid grid-cols-1 gap-6 mb-8">
+            <!-- card for chart -->
+            <div class="lg:col-span-2 bg-white rounded-lg shadow p-6">
+            <h2 class="text-xl font-semibold text-gray-900 mb-4">Data view</h2>
+
+                <!-- container for chart -->
+                <div class="relative h-96 w-full">
+                    <canvas id="data-view"  data="{{ chart_config }}" | tojson ></canvas>
+                </div>
+            </div>
+
+            {% if summary_table %}
+            <div class="bg-white rounded-lg shadow">
+                <div class="flex items-center justify-between p-4 border-b border-gray-200">
+                    <h2 class="text-lg font-semibold">Summary Statistics</h2>
+                </div>
+
+                <div id="stats-content" class="p-4">
+                    <table class="w-full">
+                        <thead>
+                            <tr class="p-4 border-b border-gray-200">
+                                <th scope="col" class="text-center p-2">Number of Accesses</th>
+                                <th scope="col" class="text-center p-2">Value</th>
+                                <th scope="col" class="text-center p-2">When</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for k, v in summary_table.items() %}
+                            <tr>
+                                <th scope="row" class="border border-black text-center p-2">{{ k }}</th>
+                                <td class="border border-black text-center p-2">{{ v[0] | round(2)}}</td>
+                                <td class="border border-black text-center p-2">{{ v[1] }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {% endif %}
+            </div>
+
+
+
+
+        <!-- card for graph form -->
+        <div class="bg-white rounded-lg shadow p-6 ">
+            <h2 class="text-xl font-semibold text-gray-900 mb-4">Search Criteria</h2>
+
+            <form method="POST" class="grid grid-cols-1 gap-4" action="/h/analytics/data-view">
+                <!-- dropdown for location/room -->
+                <div class="">
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Location</label>
+                    <select name="location" id="location-select" required id="location"
+                            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                        <option value="">Select a location</option>
                             {% for building, room in locations %}
-                                <option>{{ building}} {{ room }}</option>
+                                <option> {{ building }} {{ room }} </option>
                             {% endfor %}
-                </select>
-            </div>
+                    </select>
+                </div>
 
-            <!-- Timeframe options -->
-            <div class="bg-white text-black border text-sm rounded-lg">
-                <label for="start_date" class="block text-sm font-medium text-white dark:text-gray-200">Choose a time period:</label>
-                <input type="date" name="start_date" required id="start_date">
-            </div>
-            <div class="bg-white text-black border text-sm rounded-lg">
-                <label for="end_date" class="block text-sm font-medium text-white dark:text-gray-200">Choose a time period:</label>
-                <input type="date" name="end_date" required id="end_date">
-                </select>
-            </div>
+                <!-- start date selection -->
+                <div>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Start Date</label>
+                    <input type="date"
+                        name="start_date" required id="start_date"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                </div>
 
-            <!-- Button -->
-            <button class="button-element bg-color" type="submit">Submit</button>
-        </form>
-        {% if summary_table %}
-        <table class="table-auto bg-white text-black border-collapse border text-sm rounded-lg" >
-            <caption class="border bg-white border-black text-lg font-bold" >Summary Statistics</caption>
-            <thead>
-                <tr>
-                    <th scope="col" class="border border-black text-center p-2" >Number of Accesses</th>
-                    <th scope="col" class="border border-black text-center p-2" >Value</th>
-                    <th scope="col" class="border border-black text-center p-2" >When</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for k, v in summary_table.items() %}
-                <tr>
-                    <th scope="row" class="border border-black text-center p-2" >{{ k }}</th>
-                    <td class="border border-black text-center p-2" > {{ v[0] | round(2)}}</td>
-                    <td class="border border-black text-center p-2" > {{ v[1] }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        {% endif %}
-    </div>
-    </div>
+                <!-- end date selection -->
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">End Date</label>
+                    <input type="date"
+                        name="end_date" required id="end_date"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                </div>
 
-</body>
-<script>
-    const ctx = document.getElementById("data-view");
-    cfg = JSON.parse(ctx.getAttribute("data"));
-    new Chart(ctx, cfg);
-</script>
+                <!-- submit button -->
+                <div class="md:col-1">
+                    <button type="submit"
+                            class="w-full md:w-auto bg-cougar-red text-white px-6 py-2 rounded-lg hover:bg-cougar-crimson transition-colors font-medium">
+                        Submit
+                    </button>
+                </div>
+
+                </form>
+
+
+        </div>
+   </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        const ctx = document.getElementById("data-view");
+        cfg = JSON.parse(ctx.getAttribute("data"));
+        new Chart(ctx, cfg);
+    </script>
 {% endblock %}
