--- a/attendance_tracker/templates/index.html
+++ b/attendance_tracker/templates/index.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 
 <!-- Page title -->
-{% block title %}{{title}}{% endblock %}
+{{title}}
 
-<!-- Page name -->
-{% block name %}
-  <div class="min-h-screen flex items-center justify-center p-4">
-    <h1>{{name}}</h1>
-  </div>
-{% endblock %}
 
 <!-- Page content -->
 {% block content %}
-  {# page specific content goes here #}
+   <main class="grow pt-20 text-3xl">
+      <div class="max-w-7xl mx-auto px-6 py-8 text-center">
+          <h1 class="text-3xl text-center font-bold mb-4">{{name}}</h1>
+          <p class="mb-6 text-lg">Under construction, expect a little section about the purpose of this app and how to use it.</p>
+          <div class="flex justify-center">
+            <img class="max-w-2xl rounded-xl"
+            src=" {{ url_for('static', filename='images/cats_at_work.png') }} " alt="">
+          </div>
+      </div>
+    </main>
 {% endblock %}
