--- a/attendance_tracker/templates/src/input.css
+++ b/attendance_tracker/templates/src/input.css
@@ -1,12 +1,19 @@
 @import "tailwindcss";
 
-@layer base {
+/* @layer base {
     :root {
         --color-cougCrimson: #A60F2D;
         --color-cougRed: #CA1237;
         --color-cougGray: #4D4D4D;
         --font-display: "Proxima Nova", "sans-serif"
     }
+} */
+
+@theme {
+
+    --color-cougar-crimson: #A60F2D;
+    --color-cougar-red: #CA1237;
+    --color-cougar-gray: #4D4D4D;
 }
 
 @layer components {
