--- a/attendance_tracker/templates/analytics.html
+++ b/attendance_tracker/templates/analytics.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 
 <!-- Page title -->
-{% block title %}{{title}}{% endblock %}
+{{title}}
 
 <!-- Page name -->
-{% block name %}
-    <div class="min-h-screen flex items-center justify-center p-4">
-        <h1>{{name}}</h1>
-    </div>
-{% endblock %}
+<div class="min-h-screen flex items-center justify-center p-4">
+    <h1>{{name}}</h1>
+</div>
 
 <!-- Page content-->
 {% block content %}
