--- a/attendance_tracker/templates/room_activity.html
+++ b/attendance_tracker/templates/room_activity.html
@@ -1,115 +1,116 @@
 {% extends "base.html" %}
-{% block title %} Data View {% endblock %}
+{% block title %}
+<title>Data View </title>
+{% endblock %}
 
 {% block content %}
 <main class="flex-1 max-w-7xl mx-auto px-6 py-8 w-full">
-        <div class="">
 
-            <div class="grid grid-cols-1 gap-6 mb-8">
-                <!-- card for chart -->
-                <div class="lg:col-span-2 bg-white rounded-lg shadow p-6">
-                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Data view</h2>
+        <div class="grid lg:grid-cols-2 gap-6 mb-8">
+            <!-- card for chart -->
+            <div class="lg:col-span-2 md:col-span-1 bg-white rounded-lg shadow p-6">
+                <h2 class="text-2xl font-semibold text-gray-900 mb-4">Data view</h2>
 
-                    <!-- container for chart -->
-                    <div class="relative h-96 w-full">
-                        <canvas id="data-view"  data="{{ chart_config }}" | tojson ></canvas>
-                    </div>
+                <!-- container for chart -->
+                <div class="relative h-96 w-full">
+                    <canvas id="data-view"  data="{{ chart_config }}" | tojson ></canvas>
                 </div>
-
-                <!-- card for summary stats -->
-                <div class="bg-white rounded-lg shadow">
-                    <div class="flex items-center justify-between p-4 border-b border-gray-200">
-                        <h2 class="text-lg font-semibold">Summary Statistics</h2>
-                    </div>
-                    <!-- if the stats exist the table will populate -->
-                    {% if summary_table %}
-                    <div id="stats-content" class="p-4">
-                        <table class="w-full">
-                            <thead>
-                                <tr class="p-4 border-b border-gray-200">
-                                    <th scope="col" class="text-center p-2">Number of Accesses</th>
-                                    <th scope="col" class="text-center p-2">Value</th>
-                                    <th scope="col" class="text-center p-2">When</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            {% for k, v in summary_table.items() %}
-                                <tr>
-                                    <th scope="row" class="border border-gray-200 text-center p-2">{{ k }}</th>
-                                    <td class="border border-gray-200 text-center p-2">{{ v[0] | round(2)}}</td>
-                                    <td class="border border-gray-200 text-center p-2">{{ v[1] }}</td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                    {% else %}
-                        <!-- absence of data gets user a cute cat -->
-                        <div class="p-8 text-center">
-                            <img class="mx-auto w-32 h-32 mt-20 opacity-65 p-6"
-                            src=" {{ url_for('static', filename='images/sleepy_cat.png') }} " alt="">
-                            <p class="text-gray-500 text-sm">No summary available</p>
-                            <p class="text-gray-500 text-sm">Please make a selection to view stats</p>
-                        </div>
-                    {% endif %}
-                </div>
-
-            <!-- card for graph form -->
-            <div class="bg-white rounded-lg shadow p-6 ">
-                <h2 class="text-xl font-semibold text-gray-900 mb-4">Search Criteria</h2>
-
-                <form method="POST" class="grid grid-cols-1 gap-4" action="{{ url_for('analytics.room_activity') }}">
-                    <!-- dropdown for location/room -->
-                    <div class="">
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Location</label>
-                        <select name="location" id="location-select" required id="location"
-                                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
-                            <option value="">Select a location</option>
-                                {% for building, room in locations %}
-                                    <option> {{ building }} {{ room }} </option>
-                                {% endfor %}
-                        </select>
-                    </div>
-
-                    <!-- quick select date ranges -->
-                    <div >
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Choose a duration:</label>
-                        <select name="duration" id="duration-select" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
-                            <option value="Custom" class="mt-1.5 w-full rounded-lg border bg-white">Custom</option>
-
-                            {% for d, unit in [(2, "weeks"), (1, "month"), (3, "months"), (6, "months"), (1, "year")] %}
-                            <option>{{ d }} {{ unit }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-
-                    <!-- start date selection -->
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Start Date</label>
-                        <input type="date" name="start_date" id="start_date"
-                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2
-                        focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
-                    </div>
-
-                    <!-- end date selection -->
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">End Date</label>
-                        <input type="date" name="end_date" id="end_date"
-                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2
-                        focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
-                    </div>
-
-                    <!-- submit button -->
-                    <div class="md:col-1">
-                        <button type="submit"
-                            class="w-full md:w-auto bg-cougar-red text-white px-6 py-2 rounded-lg
-                            hover:bg-cougar-crimson transition-colors font-medium">
-                            Submit
-                        </button>
-                    </div>
-                </form>
             </div>
+
+            <!-- card for summary stats -->
+            <div class="bg-white rounded-lg shadow">
+                <div class="flex items-center justify-between p-4 border-b border-gray-200">
+                    <h2 class="text-lg font-semibold">Summary Statistics</h2>
+                </div>
+                <!-- if the stats exist the table will populate -->
+                {% if summary_table %}
+                <div id="stats-content" class="p-4">
+                    <table class="w-full">
+                        <thead>
+                            <tr class="p-4 border-b border-gray-200">
+                                <th scope="col" class="text-center p-2">Number of Accesses</th>
+                                <th scope="col" class="text-center p-2">Value</th>
+                                <th scope="col" class="text-center p-2">When</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for k, v in summary_table.items() %}
+                            <tr>
+                                <th scope="row" class="border border-gray-200 text-center p-2">{{ k }}</th>
+                                <td class="border border-gray-200 text-center p-2">{{ v[0] | round(2)}}</td>
+                                <td class="border border-gray-200 text-center p-2">{{ v[1] }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {% else %}
+                    <!-- absence of data gets user a cute cat -->
+                    <div class="p-8 text-center">
+                        <img class="mx-auto w-32 h-32 mt-20 opacity-65 p-6"
+                        src=" {{ url_for('static', filename='images/sleepy_cat.png') }} " alt="">
+                        <p class="text-gray-500 text-sm">No summary available</p>
+                        <p class="text-gray-500 text-sm">Please make a selection to view stats</p>
+                    </div>
+                {% endif %}
+            </div>
+
+        <!-- card for graph form -->
+        <div class="bg-white rounded-lg shadow p-6 ">
+            <h2 class="text-xl font-semibold text-gray-900 mb-4">Search Criteria</h2>
+
+            <form method="POST" class="grid grid-cols-1 gap-4" action="{{ url_for('analytics.room_activity') }}">
+                <!-- dropdown for location/room -->
+                <div class="">
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Location</label>
+                    <select name="location" id="location-select" required id="location"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                        <option value="">Select a location</option>
+                            {% for building, room in locations %}
+                                <option> {{ building }} {{ room }} </option>
+                            {% endfor %}
+                    </select>
+                </div>
+
+                <!-- quick select date ranges -->
+                <div >
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Choose a duration:</label>
+                    <select name="duration" id="duration-select" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                        <option value="Custom" class="mt-1.5 w-full rounded-lg border bg-white">Custom</option>
+
+                        {% for d, unit in [(2, "weeks"), (1, "month"), (3, "months"), (6, "months"), (1, "year")] %}
+                        <option>{{ d }} {{ unit }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <!-- start date selection -->
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Start Date</label>
+                    <input type="date" name="start_date" id="start_date"
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2
+                    focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                </div>
+
+                <!-- end date selection -->
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">End Date</label>
+                    <input type="date" name="end_date" id="end_date"
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2
+                    focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                </div>
+
+                <!-- submit button -->
+                <div class="md:col-1">
+                    <button type="submit"
+                        class="w-full md:w-auto bg-cougar-red text-white px-4 py-2 rounded-lg m-1
+                        hover:bg-cougar-crimson transition-colors font-medium">
+                        Submit
+                    </button>
+                </div>
+            </form>
         </div>
+
    </main>
 
    <!-- script for chart -->
