--- a/attendance_tracker/templates/add_club.html
+++ b/attendance_tracker/templates/add_club.html
@@ -2,7 +2,7 @@
 
 {% block title %}Add Club Page{% endblock %}
 {% block content %}
-<div class="main-content">
+<div class="flex-1 max-w-7xl mx-auto px-6 py-8 w-full">
     <div class="flex justify-center mt-10">
         <form method="POST" action="/h/admin/add-club" class="text-black">
             <label for="club_name">Club Name:</label><br>
@@ -23,7 +23,14 @@
              <label for="club_advisor_email">Advisor Email:</label><br>
             <input type="text" name="club_advisor_email" id="club_advisor_email" class="p-1 border border-black rounded-xl text-black" required><br><br>
 
-            <button class="button-element bg-color" type="submit">Submit</button>
+            <!-- submit button -->
+            <div class="flex justify-center pt-4">
+                <button type="submit"
+                    class="w-full md:w-auto bg-cougar-red text-white px-6 py-2 rounded-lg
+                    hover:bg-cougar-crimson transition-colors font-medium">
+                    Submit
+                </button>
+            </div>
         </form>
     </div>
 </div>
