--- a/attendance_tracker/templates/assign_club.html
+++ b/attendance_tracker/templates/assign_club.html
@@ -2,22 +2,41 @@
 
 {% block title %}Assign club to room{% endblock %}
 {% block content %}
-<div class=" main-content">
-    <div class="flex justify-center mt-10 ">
-        <form method="POST" action="/h/admin/assign-room-to-club" class="text-black ">
-            <label for="building_name">Building name:</label><br>
-            <input type="text" name="building_name" id="building_name" class="border border-black rounded-xl text-black" required><br><br>
+<main class="flex-1 flex justify-center items-center px-6 py-8 bg-gray-50">
+    <div class="w-full max-w-md bg-white rounded-2xl shadow-2xl p-8">
+        <h2 class="text-3xl text-gray-900 mb-6 text-center font-semibold">Assign club to room</h2>
 
-             <label for="room_num">Room number:</label><br>
-            <input type="text" name="room_num" id="room_num" class="border border-black rounded-xl text-black" required><br><br>
+        <form method="POST" action="/h/admin/assign-room-to-club" class="text-gray-900">
 
-             <label for="assigned_club">Assigned club:</label><br>
-            <input type="text" name="assigned_club" id="assigned_club" class="border border-black rounded-xl text-black"  required><br><br>
+            <!-- building name form -->
+            <div>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Building name:</label>
+                <input name="building_name" id="building_name" type="text" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all"
+                placeholder="Dana"required />
+            </div>
 
-            <button class="button-element " type="submit">Submit</button>
-        </form>
+            <!-- room number form -->
+            <div>
+                <label class="block text-sm font-[Proxima Nova] text-gray-700 mb-1">Room number:</label>
+                <input name="room_num" id="room_num" type="password" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all"
+                placeholder="216" required />
+            </div>
 
+            <!-- dropdown for club options -->
+            <label for="" class="block text-sm font-medium text-gray-700 mb-1">Club:</label>
+            <select name="duration" id="duration-select" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                <option value="Custom" class="mt-1.5 w-full rounded-lg border bg-white">Select a club</option>
+                <!-- TODO [Ingrid]: write loop for club options -->
+            </select>
 
-
+            <!-- submit button -->
+            <div class="flex justify-center pt-4">
+                <button type="submit"
+                    class="w-full md:w-auto bg-cougar-red text-white px-6 py-2 rounded-lg
+                    hover:bg-cougar-crimson transition-colors font-medium">
+                    Submit
+                </button>
+            </div>
     </div>
+</main>
 {% endblock %}
