--- a/attendance_tracker/templates/assign_club.html
+++ b/attendance_tracker/templates/assign_club.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Assign club to room{% endblock %}
+<title>
+    {{title}}
+</title>
+
 {% block content %}
 <main class="flex-1 flex justify-center items-center px-6 py-8 bg-gray-50">
     <div class="w-full max-w-md bg-white rounded-2xl shadow-2xl p-8">
