--- a/attendance_tracker/templates/login.html
+++ b/attendance_tracker/templates/login.html
@@ -36,7 +36,7 @@
 
         <!-- submit button -->
         <div class="flex justify-center pt-4">
-          <button type="submit"
+          <button type="submit" id="login-button"
               class="w-full md:w-auto bg-cougar-red text-white px-6 py-2 rounded-lg
               hover:bg-cougar-crimson transition-colors font-medium">
               Submit
@@ -52,7 +52,7 @@
     <!-- successful login screen -->
     {% else %}
       <div class="w-full max-w-md p-6">
-          <h2 class="text-2xl text-gray-900 mb-4 text-center"><strong>{{username}}</strong> successfully logged in!</h2>
+          <h2 id="uid-display" class="text-2xl text-gray-900 mb-4 text-center"><strong>{{username}}</strong> successfully logged in!</h2>
 
           <!-- log out form -->
           <form action="{{ url_for('auth.log_out') }}" method="post" class="space-y-2">
