--- a/attendance_tracker/templates/admin_home.html
+++ b/attendance_tracker/templates/admin_home.html
@@ -24,7 +24,7 @@
             {% endif %}
 
             <!-- card container -->
-            <div class="grid grid-cols-4 gap-6 m-4">
+            <div class="grid grid-cols-4 gap-4 m-2">
 
                 <!-- card for adding clubs -->
                 <!-- TODO [Ingrid]: fix layout of add_club page -->
@@ -58,13 +58,14 @@
                     class="bg-cougar-red hover:bg-cougar-crimson rounded-lg shadow p-6 hover:shadow-lg transition-all">
                     <div class="flex items-center justify-center m-4 font-semibold">
                         <h3 class="text-white text-2xl text-center">Communication</h3>
-                
-                      
+                    </div>
+                </a>
+
                 <a href="{{ url_for('admin.db_management') }}"
                     class="bg-cougar-red hover:bg-cougar-crimson rounded-lg shadow p-6 hover:shadow-lg transition-all">
                     <div class="flex items-center justify-center m-4 font-semibold">
                         <h3 class="text-white text-2xl text-center">Database Management</h3>
-                      
+
                     </div>
                 </a>
             </div>
